--- a/GestorInfracciones/Views/Home/Index.cshtml
+++ b/GestorInfracciones/Views/Home/Index.cshtml
@@ -1,9 +1,9 @@
-﻿<div class="jumbotron">
+﻿@*<div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS, and JavaScript.</p>
     <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
-</div>
-<div class="row">
+</div>*@
+@*<div class="row">
     <div class="col-md-4">
         <h2>Getting started</h2>
         <p>ASP.NET Web API is a framework that makes it easy to build HTTP services that reach
@@ -21,4 +21,11 @@
         <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301872">Learn more &raquo;</a></p>
     </div>
-</div>
+</div>*@
+<h3>Consideraciones:</h3>
+<ul>
+    <li>Por comodidad y que no se indicado lo contrario en la prueba, se ha desarrollado una Rest API, devolviendo y recogiendo datos en formato Json.</li>
+    <li>El modelo que sigue la aplicación está localizado en la carpeta "Esquema" de la raíz del proyecto.</li>
+    <li>Por requisitos de la prueba los datos no se persisten en una base de datos. Por lo que se optado por almacenarlo localmente en archivos Json, en la carpeta de denominada "Data"</li>
+    <li>Para comodidad he dejado un archivo que se puede importar a Insomnia (Similar a postman pero no es necesario registrarse), con las pruebas que he realizado sobre la API, que sirva para realizar la peticiones disponibles de la API.</li>
+</ul>
