--- a/GestorInfracciones/Views/Home/Index.cshtml
+++ b/GestorInfracciones/Views/Home/Index.cshtml
@@ -25,7 +25,8 @@
 <h3>Consideraciones:</h3>
 <ul>
     <li>Por comodidad y que no se indicado lo contrario en la prueba, se ha desarrollado una Rest API, devolviendo y recogiendo datos en formato Json.</li>
+    <li>En el apartado Api, estan listadas todas la peticiones disponibles.</li>
     <li>El modelo que sigue la aplicación está localizado en la carpeta "Esquema" de la raíz del proyecto.</li>
-    <li>Por requisitos de la prueba los datos no se persisten en una base de datos. Por lo que se optado por almacenarlo localmente en archivos Json, en la carpeta de denominada "Data"</li>
-    <li>Para comodidad he dejado un archivo que se puede importar a Insomnia (Similar a postman pero no es necesario registrarse), con las pruebas que he realizado sobre la API, que sirva para realizar la peticiones disponibles de la API.</li>
+    <li>Por requisitos de la prueba los datos no se persisten en una base de datos. Por lo que se optado por almacenarlo localmente en archivos Json, en la carpeta de denominada "Data". He dejado algunos archivos ejemplo con datos por lo que ya se puede interactuar.</li>
+    <li>Para comodidad he dejado un archivo que se puede importar a Insomnia (Similar a postman pero no es necesario registrarse), con las pruebas que he realizado sobre la API, para que sirva para interactuar con las peticiones disponibles de la API. Se encuentra en la carpeta TestInsomnia. Para importar el archvo, dentro de insomnia solo hay que situarse el cuadro morado con las palabras "insomnia": import/export => import Data => from File y elegir el fichero. Una vez importado, sobre "No enviromment", pichar en el desplegable: Manage Enviromment y en la ventana modificar la variable "baseurl" a la direccion que iss express abre la aplicación una vez compilada y ejecutada. </li>
 </ul>
